16_subseq/grade.txt
Grading at Wed Aug 19 19:06:43 UTC 2020
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:10:10: error: ‘lenght’ undeclared (first use in this function)
       if(lenght > result) {
          ^
maxSeq.c:10:10: note: each undeclared identifier is reported only once for each function it appears in
maxSeq.c:17:1: error: expected declaration or statement at end of input
 }
 ^
maxSeq.c:17:1: error: expected declaration or statement at end of input
maxSeq.c:17:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
